--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!-- DIGITAL CITIZENSHIP GUIDE: UNDERSTANDING AI ALGORITHMIC BIAS -->
-<!-- Paste this whole block into Google Sites: Insert → Embed → Embed code -->
+<!-- Paste this into Google Sites: Insert → Embed → Embed code -->
 <section id="ai-bias-guide" class="dcg-root" aria-labelledby="dcg-title">
     <style>
-        /* ---------- Base tokens ---------- */
         .dcg-root {
             --bg: #ffffff;
-            --fg: #0f172a;           /* near-slate-900 */
-            --muted: #475569;        /* slate-600 */
-            --link: #0a66c2;         /* accessible blue */
-            --accent: #2563eb;       /* blue-600 */
-            --accent-2: #22c55e;     /* green-500 */
-            --warn: #b45309;         /* amber-700 */
-            --card: #f8fafc;         /* slate-50 */
-            --border: #e2e8f0;       /* slate-200 */
+            --fg: #0f172a;
+            --muted: #475569;
+            --link: #0a66c2;
+            --accent: #2563eb;
+            --accent-2: #22c55e;
+            --warn: #b45309;
+            --card: #f8fafc;
+            --border: #e2e8f0;
             --shadow: 0 8px 28px rgba(2, 6, 23, 0.08);
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
             color: var(--fg);
@@ -24,18 +23,24 @@
             padding: 1rem;
         }
 
-        /* ---------- Layout ---------- */
         .dcg-wrap {
             display: grid;
             grid-template-columns: 280px 1fr;
             gap: 1.5rem;
         }
         @media (max-width: 1024px) {
-            .dcg-wrap { grid-template-columns: 1fr; }
-            .dcg-toc { position: static; top: auto; }
+            .dcg-wrap {
+                grid-template-columns: 1fr;
+            }
+            .dcg-toc {
+                position: relative;
+                top: auto;
+                max-height: 300px;
+                overflow: auto;
+                margin-bottom: 1rem;
+            }
         }
 
-        /* ---------- Header ---------- */
         .dcg-header {
             margin: 0 0 1rem 0;
             padding: 1rem 1.25rem;
@@ -44,17 +49,18 @@
             background: linear-gradient(180deg, #f8fafc, #ffffff);
             box-shadow: var(--shadow);
         }
+
         .dcg-title {
             font-size: clamp(1.5rem, 2.4vw, 2rem);
             margin: 0 0 .25rem 0;
         }
+
         .dcg-sub {
             margin: 0;
             color: var(--muted);
             font-size: .975rem;
         }
 
-        /* ---------- TOC ---------- */
         .dcg-toc {
             position: sticky;
             top: 12px;
@@ -64,11 +70,13 @@
             padding: .75rem;
             background: var(--card);
         }
+
         .dcg-toc h3 {
             font-size: 1rem;
             margin: .25rem .5rem .25rem;
             color: var(--muted);
         }
+
         .dcg-toc a {
             display: block;
             padding: .5rem .75rem;
@@ -78,6 +86,7 @@
             text-decoration: none;
             border: 1px solid transparent;
         }
+
         .dcg-toc a:hover,
         .dcg-toc a[aria-current="true"] {
             background: #eef2ff;
@@ -85,11 +94,11 @@
             color: #1e40af;
         }
 
-        /* ---------- Content ---------- */
         .dcg-content {
             display: grid;
             gap: 1rem;
         }
+
         .dcg-section {
             border: 1px solid var(--border);
             border-radius: 16px;
@@ -97,6 +106,7 @@
             box-shadow: var(--shadow);
             overflow: hidden;
         }
+
         .dcg-sec-head {
             display: flex;
             align-items: center;
@@ -106,22 +116,27 @@
             background: #f1f5f9;
             border-bottom: 1px solid var(--border);
         }
+
         .dcg-sec-head h2,
         .dcg-sec-head h3 {
             margin: 0;
             font-size: clamp(1.1rem, 1.5vw, 1.25rem);
             color: #003366;
         }
+
         .dcg-sec-body {
             padding: 1rem 1.25rem 1.25rem;
         }
+
         .dcg-sec-body h3 {
             color: #003366;
             margin-top: 1rem;
         }
-        .dcg-muted { color: var(--muted); }
 
-        /* ---------- Callouts ---------- */
+        .dcg-muted {
+            color: var(--muted);
+        }
+
         .dcg-callout {
             border: 1px solid var(--border);
             background: #f8fafc;
@@ -130,21 +145,34 @@
             display: grid;
             gap: .25rem;
         }
-        .dcg-callout.good { border-left: 4px solid var(--accent-2); }
-        .dcg-callout.info { border-left: 4px solid var(--accent); }
-        .dcg-callout.warn { border-left: 4px solid var(--warn); }
 
-        /* ---------- List styling ---------- */
-        .dcg-content ul { padding-left: 1.2rem; }
-        .dcg-content li { margin: .25rem 0; }
+        .dcg-callout.good {
+            border-left: 4px solid var(--accent-2);
+        }
 
-        /* ---------- Cards ---------- */
+        .dcg-callout.info {
+            border-left: 4px solid var(--accent);
+        }
+
+        .dcg-callout.warn {
+            border-left: 4px solid var(--warn);
+        }
+
+        .dcg-content ul {
+            padding-left: 1.2rem;
+        }
+
+        .dcg-content li {
+            margin: .25rem 0;
+        }
+
         .dcg-grid {
             display: grid;
             grid-template-columns: repeat(12, 1fr);
             gap: .75rem;
             margin-top: .5rem;
         }
+
         .dcg-card {
             grid-column: span 12;
             border: 1px solid var(--border);
@@ -152,13 +180,21 @@
             background: var(--card);
             padding: .875rem 1rem;
         }
-        @media (min-width: 720px) {
-            .dcg-card.col-6 { grid-column: span 6; }
-            .dcg-card.col-4 { grid-column: span 4; }
-        }
-        .dcg-card h4 { margin: 0 0 .25rem 0; }
 
-        /* ---------- Accordion ---------- */
+        @media (min-width: 720px) {
+            .dcg-card.col-6 {
+                grid-column: span 6;
+            }
+
+            .dcg-card.col-4 {
+                grid-column: span 4;
+            }
+        }
+
+        .dcg-card h4 {
+            margin: 0 0 .25rem 0;
+        }
+
         .dcg-acc summary {
             list-style: none;
             cursor: pointer;
@@ -167,11 +203,19 @@
             font-weight: 600;
             outline-offset: 4px;
         }
-        .dcg-acc summary::-webkit-details-marker { display: none; }
-        .dcg-acc details[open] > summary { background: #eef2ff; }
-        .dcg-acc .acc-body { padding: .75rem 1rem 1rem; }
 
-        /* ---------- Checklist ---------- */
+        .dcg-acc summary::-webkit-details-marker {
+            display: none;
+        }
+
+        .dcg-acc details[open] > summary {
+            background: #eef2ff;
+        }
+
+        .dcg-acc .acc-body {
+            padding: .75rem 1rem 1rem;
+        }
+
         .dcg-checklist label {
             display: grid;
             grid-template-columns: 28px 1fr;
@@ -183,14 +227,18 @@
             margin: .375rem 0;
             background: #ffffff;
         }
+
         .dcg-checklist input[type="checkbox"] {
             transform: translateY(3px);
-            width: 20px; height: 20px;
+            width: 20px;
+            height: 20px;
             accent-color: var(--accent-2);
         }
-        .dcg-small { font-size: .925rem; }
 
-        /* ---------- Chips ---------- */
+        .dcg-small {
+            font-size: .925rem;
+        }
+
         .dcg-chip {
             display: inline-block;
             padding: .25rem .5rem;
@@ -202,15 +250,17 @@
             margin: .125rem .25rem .125rem 0;
         }
 
-        /* ---------- Links ---------- */
-        .dcg-content a { color: var(--link); text-underline-offset: 2px; }
-        .dcg-content a:hover { text-decoration-thickness: 2px; }
+        .dcg-content a {
+            color: var(--link);
+            text-underline-offset: 2px;
+        }
+
+        .dcg-content a:hover {
+            text-decoration-thickness: 2px;
+        }
     </style>
 
-    <!-- Header -->
-
     <div class="dcg-wrap" role="region" aria-label="Guide body">
-        <!-- TOC -->
         <nav class="dcg-toc" aria-label="On this page">
             <h3>On this page</h3>
             <a href="#intro">Introduction</a>
@@ -218,7 +268,6 @@
             <a href="#ethics">Ethical and eSafety</a>
             <a href="#implementation">Implementation challenges</a>
             <a href="#curriculum">Curriculum connections</a>
-            <a href="#recommendations">Teacher recommendations</a>
         </nav>
 
         <!-- Content -->
@@ -230,10 +279,13 @@
                 </div>
                 <div class="dcg-sec-body">
                     <p><strong>What is algorithmic bias?</strong><br>
-                        Algorithms learn patterns from data. If the data or design overlooks diversity, the system can repeatedly produce unfair outcomes (Jonker & Rogers, 2024). Two common forms:</p>
+                        Algorithms learn patterns from data. If the data or design overlooks diversity, the system can repeatedly produce unfair outcomes
+                        (<a href="https://www.ibm.com/think/topics/algorithmic-bias" target="_blank" rel="noopener">Jonker & Rogers, 2024</a>).
+                        Two common forms:</p>
                     <ul>
                         <li><strong>Allocative bias:</strong> unfair distribution of opportunities, for example a tool giving higher scores to some groups.</li>
-                        <li><strong>Representational bias:</strong> distorted portrayals, for example image searches showing scientists as mostly male (Suresh & Guttag, 2021).</li>
+                        <li><strong>Representational bias:</strong> distorted portrayals, for example image searches showing scientists as mostly male
+                            (<a href="https://doi.org/10.1145/3465416.3483305" target="_blank" rel="noopener">Suresh & Guttag, 2021</a>).</li>
                     </ul>
 
                     <p><strong>Why it matters in education</strong><br>
@@ -241,12 +293,14 @@
                     <ul>
                         <li>Mislabel students as at risk, distort results, or restrict opportunities.</li>
                         <li>Reinforce stereotypes that affect identity, aspiration, and belonging.</li>
-                        <li>Reduce trust in assessment and feedback (Baker & Hawn, 2021).</li>
+                        <li>Reduce trust in assessment and feedback (<a href="https://doi.org/10.1007/s40593-021-00285-9" target="_blank" rel="noopener">Baker & Hawn, 2021</a>).</li>
                     </ul>
 
-                    <p>In 2020 the UK’s grading algorithm downgraded many students from public schools while advantaging those from elite schools, prompting a national reversal and debate about fairness (Baker & Hawn, 2021).</p>
+                    <p>In 2020 the UK's grading algorithm downgraded many students from public schools while advantaging those from elite schools, prompting a national reversal and debate about fairness (<a href="https://doi.org/10.1007/s40593-021-00285-9" target="_blank" rel="noopener">Baker & Hawn, 2021</a>)
+                        .</p>
 
-                    <p><strong>Teacher role:</strong> help students question how technology makes decisions, apply fairness checks, and connect this to digital citizenship and curriculum expectations on equity, ethics, and values (UNESCO, 2021).</p>
+                    <p><strong>Teacher role:</strong> help students question how technology makes decisions, apply fairness checks, and connect this to digital citizenship and curriculum expectations on equity, ethics, and values (<a href="https://doi.org/10.54675/PCSP7350" target="_blank" rel="noopener">UNESCO, 2021</a>)
+                        .</p>
                 </div>
             </section>
 
@@ -261,24 +315,29 @@
 
                 <p><strong>Causes of Algorithmic Bias</strong></p>
                 <ul>
-                    <li><strong>Biased training data:</strong> AI systems inherit inequalities embedded in historical datasets, reinforcing patterns of gender, racial, or socioeconomic disadvantage (Varsha, 2023).</li>
-                    <li><strong>Design and optimisation choices:</strong> When algorithms prioritise engagement or accuracy without ethical safeguards, they can amplify stereotypes or sensational content (UNESCO, 2021).</li>
+                    <li><strong>Biased training data:</strong> AI systems inherit inequalities embedded in historical datasets, reinforcing patterns of gender, racial, or socioeconomic disadvantage (<a href="https://doi.org/10.1016/j.jjimei.2023.100165" target="_blank" rel="noopener">Varsha, 2023</a>).</li>
+                    <li><strong>Design and optimisation choices:</strong> When algorithms prioritise engagement or accuracy without ethical safeguards, they can amplify stereotypes or sensational content (<a href="https://doi.org/10.54675/PCSP7350" target="_blank" rel="noopener">UNESCO, 2021</a>).</li>
                     <li><strong>Opaque models:</strong> Black box systems make it hard to see or challenge unfair reasoning, so bias can persist unnoticed.</li>
                 </ul>
 
                 <p><strong>Impacts on Education</strong></p>
                 <ul>
-                    <li><strong>Individual learners:</strong> Biased tools can misidentify student ability or disproportionately flag marginalised students for behavioural risk, undermining confidence and trust (Lockwood & Brown, 2025).</li>
-                    <li><strong>System-level equity:</strong> AI tutoring platforms often perform better for students whose demographics match the training data, potentially widening achievement gaps (Baker & Hawn, 2021).</li>
-                    <li><strong>Youth perspectives:</strong> Algorithms tuned for engagement create “filter bubbles,” shaping worldviews and limiting exposure to diverse perspectives (eSafety Commissioner, 2025).</li>
+                    <li><strong>Individual learners:</strong> Biased tools can misidentify student ability or disproportionately flag marginalised students for behavioural risk, undermining confidence and trust (<a href="https://doi.org/10.1080/2372966x.2025.2529148" target="_blank" rel="noopener">Lockwood & Brown, 2025</a>)
+                        .</li>
+                    <li><strong>System-level equity:</strong> AI tutoring platforms often perform better for students whose demographics match the training data, potentially widening achievement gaps (<a href="https://doi.org/10.1007/s40593-021-00285-9" target="_blank" rel="noopener">Baker & Hawn, 2021</a>)
+                        .</li>
+                    <li><strong>Youth perspectives:</strong> Algorithms tuned for engagement create "filter bubbles," shaping worldviews and limiting exposure to diverse perspectives (<a href="https://www.esafety.gov.au/newsroom/blogs/an-unfair-fight-how-algorithms-are-shaping-our-adolescents" target="_blank" rel="noopener">eSafety Commissioner, 2025</a>)
+                        .</li>
                 </ul>
 
                 <p><strong>Best practices emerging from the literature</strong></p>
                 <ul>
-                    <li><strong>Run fairness checks:</strong> Test classroom tools with diverse inputs, compare outcomes across groups, and document mitigation steps. Treat AI outputs as hypotheses, not verdicts (Ferrara, 2023).</li>
+                    <li><strong>Run fairness checks:</strong> Test classroom tools with diverse inputs, compare outcomes across groups, and document mitigation steps. Treat AI outputs as hypotheses, not verdicts (<a href="https://doi.org/10.3390/sci6010003" target="_blank" rel="noopener">Ferrara, 2023</a>).</li>
                     <li><strong>Teach critical questioning:</strong> Build routines where students ask what data trained a system, what is missing, who benefits, and how fairness will be tested in this task.</li>
-                    <li><strong>Use diverse data and examples:</strong> Demonstrate systems with varied names, accents, images and contexts. Invite students to bring counter-examples and discuss differences observed (Shrestha & Das, 2022).</li>
-                    <li><strong>Learn through inquiry:</strong> Evidence-based pedagogies include algorithm auditing by students, short case studies of real incidents, role play as “developers” tasked with debiasing a dataset, and critical media analyses that make stereotypes visible (UNSW, 2021).</li>
+                    <li><strong>Use diverse data and examples:</strong> Demonstrate systems with varied names, accents, images and contexts. Invite students to bring counter-examples and discuss differences observed (<a href="https://doi.org/10.3389/frai.2022.976838" target="_blank" rel="noopener">Shrestha & Das, 2022</a>)
+                        .</li>
+                    <li><strong>Learn through inquiry:</strong> Evidence-based pedagogies include algorithm auditing by students, short case studies of real incidents, role play as "developers" tasked with debiasing a dataset, and critical media analyses that make stereotypes visible (<a href="https://www.teaching.unsw.edu.au/ai/examples" target="_blank" rel="noopener">UNSW, 2021</a>)
+                        .</li>
                 </ul>
 
                 <div class="dcg-callout good">
@@ -428,16 +487,12 @@
     </div>
 
     <script>
-        // Smooth scroll and active link highlighting
-        (function() {
+        (function () {
             const tocLinks = Array.from(document.querySelectorAll('.dcg-toc a'));
             const sections = tocLinks.map(a => document.querySelector(a.getAttribute('href'))).filter(Boolean);
-
-            const setActive = (id) => {
+            const setActive = id => {
                 tocLinks.forEach(a => a.setAttribute('aria-current', a.getAttribute('href') === id ? 'true' : 'false'));
             };
-
-            // Smooth scroll
             tocLinks.forEach(a => {
                 a.addEventListener('click', e => {
                     e.preventDefault();
@@ -447,30 +502,12 @@
                     setActive(a.getAttribute('href'));
                 });
             });
-
-            // Intersection observer for active state
-            const io = new IntersectionObserver((entries) => {
+            const io = new IntersectionObserver(entries => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) setActive('#' + entry.target.id);
                 });
             }, { rootMargin: '-40% 0px -55% 0px', threshold: 0.01 });
-
             sections.forEach(sec => io.observe(sec));
-        })();
-
-        // Checklist persistence
-        (function() {
-            const form = document.getElementById('dcg-checklist');
-            if (!form) return;
-            const key = 'dcg-checklist-v1';
-            const saved = JSON.parse(localStorage.getItem(key) || '{}');
-            form.querySelectorAll('input[type="checkbox"][data-key]').forEach(cb => {
-                if (saved[cb.dataset.key]) cb.checked = true;
-                cb.addEventListener('change', () => {
-                    saved[cb.dataset.key] = cb.checked;
-                    localStorage.setItem(key, JSON.stringify(saved));
-                });
-            });
         })();
     </script>
 </section>
